<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/label_refresh"/>
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/label_overflow">
        <menu>
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_action_help"
                android:title="@string/action_help"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>