<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/all_saves"
        style="@style/all_saves" >

        <!-- <RelativeLayout style="@style/save_container.header" > -->


        <!-- <TextView -->
        <!-- android:id="@+id/txt_first_name" -->
        <!-- style="@style/save.header" -->
        <!-- android:text="@string/first_name" /> -->
        <!-- </RelativeLayout> -->

        <RelativeLayout style="@style/save_container" >

            <TextView
                android:id="@+id/label_account_status"
                style="@style/label"
                android:text="@string/label_account_status" />

            <TextView
                android:id="@+id/txt_account_status"
                style="@style/save"
                android:text="@string/account_status" />
        </RelativeLayout>

        <RelativeLayout style="@style/save_container" >

            <TextView
                android:id="@+id/label_total"
                style="@style/label"
                android:text="@string/label_total" />

            <TextView
                android:id="@+id/txt_total"
                style="@style/save"
                android:text="@string/total" />
        </RelativeLayout>

        <RelativeLayout style="@style/save_container" >

            <TextView
                android:id="@+id/label_balance"
                style="@style/label"
                android:text="@string/label_balance" />

            <TextView
                android:id="@+id/txt_balance"
                style="@style/save"
                android:text="@string/balance" />
        </RelativeLayout>

        <RelativeLayout style="@style/save_container" >

            <TextView
                android:id="@+id/label_mins_usedleft"
                style="@style/label"
                android:text="@string/label_mins_usedleft" />

            <TextView
                android:id="@+id/txt_mins_total"
                style="@style/save"
                android:text="@string/mins_total"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_mins_seperator"
                style="@style/mins_separator"
                android:layout_toLeftOf="@id/txt_mins_total"
                android:text="@string/label_of" />

            <TextView
                android:id="@+id/txt_mins_usedleft"
                style="@style/save.special"
                android:layout_toLeftOf="@id/txt_mins_seperator"
                android:text="@string/mins_usedleft" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="@style/chart"
                android:layout_below="@id/label_mins_usedleft" />
        </RelativeLayout>

        <RelativeLayout style="@style/save_container" >

            <TextView
                android:id="@+id/label_start_date"
                style="@style/label"
                android:text="@string/label_start_date" />

            <TextView
                android:id="@+id/txt_start_date"
                style="@style/save"
                android:text="@string/start_date" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@style/chart"
                android:layout_below="@id/label_start_date" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        style="@style/status_bar"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/txt_last_updated"
            style="@style/last_updated"
            android:layout_marginLeft="2dp"
            android:textColor="#7F7F7F" />
    </RelativeLayout>

</RelativeLayout>